Added list of image types to --help. Added use of QEMU_LOCAL and --build-path. Added build_qemu option to allow repeat of qemu build, which we will by default only build once. in conf_default.yml we made machine use default for image_type, to allow use of more than just aarch64.

--- a/conf/conf_default.yml
+++ b/conf/conf_default.yml
@@ -19,7 +19,8 @@ qemu-conf:
     #ssh_pub_key: /home/user/.ssh/id_rsa.pub
 
     cpu: max
-    machine: virt,gic-version=max
+    #machine: virt,gic-version=max
+    #machine: pc
     memory: 16G
     #
     # This specifies a 16 core, 8 core/socket machine with 4 numa nodes
